--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a><i class="fab fa-instagram"></i></a>
-      <a class="navbar-brand" href="{% url 'welcome' %}">Instagram</a>
+      <a class="navbar-brand" href="{% url 'accounts/login' %}">Instagram</a>
     </div>
     <div class="col-sm-4 col-md-4 navbar-center">
       <form class="navbar-form" role="search" action="{% url 'search_image' %}">
@@ -16,7 +16,7 @@
       </form>
       </div>
       <p><a  href="{%url 'uploadPhoto'%}">Upload Photo</a></p>
-      <a  href="{% url 'edit_profile_info' %}"><i class="fas fa-user">Edit a  profile</i></a>
+      <a  href="{% url 'edit_profile' %}"><i class="fas fa-user">Edit profile</i></a>
       <ul>
         <li>
             <a href="/logout"><i class="fas fa-sign-out-alt">Logout</i></a>
