--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -2,11 +2,10 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a><i class="fab fa-instagram"></i></a>
-      <a class="navbar-brand" href="{% url 'accounts/login' %}">Instagram</a>
+      <a class="navbar-brand" href="{% url 'welcome' %}">Instagram</a>
     </div>
     <div class="col-sm-4 col-md-4 navbar-center">
       <form class="navbar-form" role="search" action="{% url 'search_image' %}">
-
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search " name="image">
           <div class="input-group-btn">
@@ -16,12 +15,11 @@
       </form>
       </div>
       <p><a  href="{%url 'uploadPhoto'%}">Upload Photo</a></p>
-      <a  href="{% url 'edit_profile' %}"><i class="fas fa-user">Edit profile</i></a>
+      <a  href="{% url 'edit_profile_info' %}"><i class="fas fa-user">Edit a  profile</i></a>
       <ul>
         <li>
             <a href="/logout"><i class="fas fa-sign-out-alt">Logout</i></a>
         </li>
       </ul>
-      
   </div>
 </nav>
