--- a/instaapp/templates/base.html
+++ b/instaapp/templates/base.html
@@ -13,7 +13,7 @@
 
   {% block styles %}
     
-    <link rel="stylesheet" href="{% static 'css/baseinsta.css' %}">
+    <link rel="stylesheet" href="{% static 'css/baseinstaapp.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
