designing some icons and setting them on the navbar and debugging the login

--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -4,28 +4,18 @@
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4">
-      <img src="https://i0.wp.com/somention.com/wp-content/uploads/2018/11/kissclipart-apple-256gb-iphone-clipart-iphone-x-apple-iphone-7-489a325889c8d2a0.png?ssl=1" >
-    </div>
+    
     <div class="col-md-6">
-
-      <br>
-      <br>
-
-     <div id="phone" style="float:right">
+     <div id="phone" style="float:right;display:flex">
       <div class="panel panel-default">
-
         <div class="panel-heading">
           <h1 class="text-center"><em>Instagram</em></h1>
         </div>
         <div class="panel-body">
-            <p><b>Register into instagram to see photos</b></p>
+            <p><b>Easy account creation, be a part of the story</b></p>
         <a class="btn btn-primary" href="/accounts/register">Register</a>
-            <p><b>Click here to login</b></p>
         <a class="btn btn-primary" href="/accounts/login/">Login</a>
-
         </div>
-
       </div>
     </div>
     </div>
