--- a/instaapp/templates/registration/registration_form.html
+++ b/instaapp/templates/registration/registration_form.html
@@ -2,11 +2,12 @@
 {% block content %}
 <div class="container">
   <div class="row">
-    <!-- Empty div -->
+    <!-- empty div -->
     <div class="col-md-4"></div>
+    <!-- empry div -->
     <div class="col-md-4">
       {% if form.errors %}
-        <p> Some Information Might be Incorrect </p>
+      <p> Some Information Might be Incorrect, please recheck and retry </p>
       {% endif %}
       <div class="panel panel-default">
 
@@ -33,6 +34,7 @@
     </div>
     <!-- empty div -->
     <div class="col-md-4"></div>
+    <!-- empty div -->
   </div>
 </div>
 
