--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -15,7 +15,7 @@
       </form>
       </div>
       <p><a  href="{%url 'uploadPhoto'%}">Upload Photo</a></p>
-      <a  href="{% url 'edit_profile_info' %}"><i class="fas fa-user">Edit a  profile</i></a>
+      <a  href="{% url 'edit_profile_info' %}"><i class="fas fa-user">Account</i></a>
       <ul>
         <li>
             <a href="/logout"><i class="fas fa-sign-out-alt">Logout</i></a>
