--- a/instaapp/templates/upload.html
+++ b/instaapp/templates/upload.html
@@ -6,19 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% block styles %} {% bootstrap_css %}
-  <link rel="stylesheet" href="{% static 'css/baseinsta.css' %}"> {% endblock %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
 </head>
 <body>
-
+<!-- empty div -->
+<div class="col-md-3"></div>
+<!-- empry div -->
+   {% block scripts %}
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  {% bootstrap_javascript %} {% endblock %}
+<div class="col-md-6">
   <form  action="{%url 'uploadPhoto'%}" method="post" enctype="multipart/form-data">
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input type="submit" class="btn btn-success btn-lg" value="Post">
+    <input type="submit" class="btn-small btn-success btn-lg" value="Post">
   </form>
+  </div>
 
-   {% block scripts %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  {% bootstrap_javascript %} {% endblock %}
+  <!-- empty div -->
+<div class="col-md-3"></div>
+<!-- empry div -->
 </body>
 </html>
