--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -2,10 +2,8 @@
 {% load bootstrap3 %}
 {% block content %}
 <div class="container">
-  <div class="row">
-    <!-- Empty div -->
-    
-    <div class="col-md-6">
+  <div class="row">   
+    <div class="col-md-8 col-sm-8 col-lg-8 col-xs-8">
      <div id="phone" style="float:right;display:flex">
       <div class="panel panel-default">
         <div class="panel-heading">
