--- a/instaapp/templates/home.html
+++ b/instaapp/templates/home.html
@@ -19,7 +19,7 @@
             </div> ​
             {% empty %}
             <div class="row">
-                <h2 class="text-center">No Uploaded images yet</h2>
+                <h2 class="text-center">No Uploaded images, resgister and upload some</h2>
             </div>
             {% endfor %}
         </div>
