--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-light bg-light">
+<nav style="margin-bottom:5%" class="navbar navbar-light bg-light">
   <div class="container-fluid">
     <div class="navbar-header">
       <a><i class="fab fa-instagram"></i></a>
@@ -9,12 +9,12 @@
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Search " name="image">
           <div class="input-group-btn">
-            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search">Search</i></button>
+            <button class="btn btn-sm btn-info nav-item" type="submit"><i class="glyphicon glyphicon-search">Search</i></button>
           </div>
         </div>
       </form>
       </div>
-      <p><a  href="{%url 'uploadPhoto'%}">Upload Photo</a></p>
+      <h5><a  href="{%url 'uploadPhoto'%}">Upload Photo</a></h5>
       <a  href="{% url 'edit_profile_info' %}"><i class="fas fa-user">Account</i></a>
       <ul>
         <li>
