--- a/instaapp/templates/profile.html
+++ b/instaapp/templates/profile.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="{% static 'css/styles.css' %}"> {% endblock %}
 </head>
 <body>
- <div class="col-md-3" >
+ <div class="col-md-3 pushtop" >
   </div>
 
 <div class="col-md-6" >
@@ -17,7 +17,7 @@
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input type="submit" class="btn btn-light btn-small " value="Post">
+    <input type="submit" class="btn-info btn-light btn-small " value="Post">
   </form>
   </div>
 
