--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <div class="row">   
-    <div class="col-md-8 col-sm-8 col-lg-8 col-xs-8">
+    <div class="col-md-6 col-sm-6 col-lg-6 col-xs-6">
      <div id="phone" style="float:right;display:flex">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -12,7 +12,7 @@
         <div class="panel-body">
             <p><b>Easy account creation, be a part of the story</b></p>
         <a class="btn btn-primary" href="/accounts/register">Register</a>
-        <a class="btn btn-primary" href="/accounts/login/">Login</a>
+        <a class="btn btn-info" href="/accounts/login/">Login</a>
         </div>
       </div>
     </div>
