--- a/instaapp/templates/upload.html
+++ b/instaapp/templates/upload.html
@@ -20,7 +20,7 @@
     {%csrf_token%}
 
     {% bootstrap_form form%}
-    <input type="submit" class="btn-small btn-success btn-lg" value="Post">
+    <input type="submit" class="btn-success btn-sm btn-info" value="Post">
   </form>
   </div>
 
