--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -11,8 +11,10 @@
         </div>
         <div class="panel-body">
             <p><b>Easy account creation, be a part of the story</b></p>
+                    <a class="btn btn-info" href="/accounts/login/">Login</a>
+<p>
+<p>No account yet?</p>
         <a class="btn btn-primary" href="/accounts/register">Register</a>
-        <a class="btn btn-info" href="/accounts/login/">Login</a>
         </div>
       </div>
     </div>
