--- a/instaapp/templates/comment.html
+++ b/instaapp/templates/comment.html
@@ -1,7 +1,11 @@
+{%extends "base.html"%}
+
 {% load bootstrap3 %} {% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
+{% block content %}
+    
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,3 +45,4 @@
 </body>
 
 </html>
+{%endblock%}
