--- a/instaapp/templates/registration/login.html
+++ b/instaapp/templates/registration/login.html
@@ -1,19 +1,21 @@
-{%extends "registration/base.html"%} {% load bootstrap3 %}
+{%extends "registration/base.html"%}
+{% load bootstrap3 %} 
+{% load staticfiles %}
 {% block content %}
 <div class="container">
   <div class="row">
 
-    <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <!-- Empty div -->
+     <!-- empty div -->
+    <div class="col-md-3 col-sm-3 col-lg-3 col-xs-3"></div>
+    <!-- empty div -->
 
     <div class="col-md-4">
       {% if form.errors %}
       <p> Password or Username is incorrect </p>
       {% endif %}
-      <div class="panel panel-default">
+      <div class="panel">
         <div class="panel-heading">
-          <h3 class="text-center">Sign In</h3>
+          <h3 class="text-center">Login</h3>
         </div>
         <div class="panel-body">
           <form  action="/accounts/login/" method="post">
@@ -30,8 +32,8 @@
     </div>
 
     <!-- empty div -->
-    <div class="col-md-4"></div>
-    <!-- Empty div -->
+    <div class="col-md-3 col-sm-3 col-lg-3 col-xs-3"></div>
+    <!-- empty div -->
 
   </div>
 </div>
