--- a/instaapp/templates/upload.html
+++ b/instaapp/templates/upload.html
@@ -1,6 +1,7 @@
-{% load bootstrap3 %} {% load staticfiles %}
-<!DOCTYPE html>
-<html>
+{%extends "registration/base.html"%}
+{% load bootstrap3 %} 
+{% load staticfiles %}
+{% block content %}
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +15,8 @@
 <!-- empry div -->
    {% block scripts %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  {% bootstrap_javascript %} {% endblock %}
+  {% bootstrap_javascript %}
+   {% endblock %}
 <div class="col-md-6">
   <form  action="{%url 'uploadPhoto'%}" method="post" enctype="multipart/form-data">
     {%csrf_token%}
@@ -28,4 +30,4 @@
 <div class="col-md-3"></div>
 <!-- empry div -->
 </body>
-</html>
+  {% endblock %}
