--- a/instaapp/templates/base.html
+++ b/instaapp/templates/base.html
@@ -3,7 +3,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
 
   {% if title %}
   <title>Instagram - {{title}}</title>
